<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        app:cardElevation="3dp"
        android:layout_margin="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="108dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_text"
                android:text="@string/title_of_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:maxLines="1" />

            <TextView
                android:id="@+id/content"
                android:text="@string/content_of_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>